<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>PatternsPractice</groupId>
  <artifactId>PatternsPractice</artifactId>
  <version>0.0.1-SNAPSHOT</version>
  <build>
    <sourceDirectory>src</sourceDirectory>
    <resources>
      <resource>
        <directory>src</directory>
        <excludes>
          <exclude>**/*.java</exclude>
        </excludes>
      </resource>
    </resources>
    <plugins>
      <plugin>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.8.1</version>
        <configuration>
          <source>9</source>
          <target>9</target>
          <compilerArgs>
            <arg>--add-modules</arg>
            <arg>jdk.incubator.httpclient</arg>
       		</compilerArgs>
        </configuration>
      </plugin>
    </plugins>
  </build>
  
  <!-- https://mvnrepository.com/artifact/org.apache.httpcomponents/httpclient
  <dependencies>
	  <dependency>
	    <groupId>org.apache.httpcomponents</groupId>
	    <artifactId>httpclient</artifactId>
	    <version>4.5.13</version>
	</dependency>
  </dependencies>

   -->
</project>